--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^(.*)$ $1.html
 
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html !-f
+RewriteRule ^(.*)$ https://aga-mca.github.io/$1
+
 ErrorDocument 404 https://agacraft.ga/404
